# centurion

./: .directory  .gitignore  README.md  apiSecrets  backend_app.py  centurion_run_guide.html  docker-compose.yml  fix.sh  package-lock.json  start_backend.sh  start_frontend.sh
backend_cpp/: CMakeLists.txt  CMakeLists.txt.bak  backend_cpp.cbp  models.sh
backend_cpp/config/: .env  .env.example  api_keys.conf.template
backend_cpp/include/: Mongomanager.h  config.h  demographics_estimator.h  face_recognition.h  image_utils.h  iot_simulation.h  liveness_detection.h  logging.h  model_loader.h  network_utils.h  server.h  tor_control.h  tor_integration.h
backend_cpp/include/config/: ConfigManager.h
backend_cpp/models/: README.md  age.prototxt  age_model.caffemodel  arcface_r100.onnx  ethnicity_model.onnx  gender.caffemodel  gender.prototxt
backend_cpp/src/: database.cpp  demographics_estimator.cpp  demoraphics_estimator.h  face_recognition.cpp  iot_simulation.cpp  liveness_detection.cpp  logging.cpp  main.cpp  model_loader.cpp  mongo_manager.cpp  network_utils.cpp  server.cpp  tor_control.cpp  tor_integration.cpp
backend_cpp/tor_config/: torrc
backend_cpp/utils/: image_utils.cpp
database/: db_config.js  package-lock.json  package.json
database/models/: FaceEmbedding.js  LogEntry.js  User.js
database/seeds/: demo.js
frontend/: package-lock.json  package.json  start.sh
frontend-backup/: App.jsx  package.json
frontend-backup/api/: backendAPI.js
frontend-backup/components/: Dashboard.js  Dashboard.jsx  IoTSimulation.js  IoTSimulation.jsx  LiveFeed.js  LiveFeed.jsx  LoginPage.js  LoginPage.jsx  PermissionsPage.js  PermissionsPage.jsx
frontend-backup/components/AccessibilityDrawer/: index.js
frontend-backup/styles/: animations.css  main.css
frontend-backup/utils/: webcam_utils.js
frontend/public/: index.html
frontend/src/: App.jsx  setupProxy.js
frontend/src/api/: backendAPI.js
frontend/src/components/: Dashboard.jsx  IoTSimulation.jsx  LoginPage.jsx
frontend/src/styles/: main.css
frontend/src/utils/: emailService.js  i18n.js  webcam_utils.js
scripts/: complete_setup.sh  convert_facenet_to_onnx.py  download_models.sh  requirements_models.txt  setup_env.sh  simple_start.sh  start_backend.sh
